--- a/index.html
+++ b/index.html
@@ -235,7 +235,74 @@
       .headline{font-size:36px}
       .grid{grid-template-columns:1fr}
     }
-  </style>
+  
+/* ======= Mobile Fine-Tuning ======= */
+@media (max-width: 980px){
+  .container{padding:0 16px}
+  .hero{padding:54px 0 24px}
+  .headline{font-size:34px;line-height:1.12}
+  .sub{font-size:16px}
+  .cta .btn{padding:12px 16px;font-size:14px}
+  .hero-img{height:220px}
+  .grid{grid-template-columns:1fr 1fr;gap:14px}
+  .pricing{grid-template-columns:1fr;gap:14px}
+  .testi{grid-template-columns:1fr}
+  .card .title{font-size:15px}
+  .card .desc{font-size:13px}
+  .price .new{font-size:17px}
+}
+@media (max-width: 720px){
+  .headline{font-size:30px}
+  .sub{font-size:15px}
+  .pills{gap:8px}
+  .pill{padding:6px 10px;font-size:12px}
+  .hero-img{height:200px}
+  .grid{grid-template-columns:1fr;gap:14px}
+  .btn{padding:12px 16px;font-size:14px;border-radius:12px}
+  .qty{gap:6px;padding:6px 8px}
+  .qty button{font-size:16px}
+  .section-title{font-size:22px}
+  .section-sub{font-size:14px}
+  .drawer{width:100vw;max-width:100vw;right:-100%}
+  .drawer .body{gap:10px}
+  .drawer .foot{padding:12px}
+  .row{gap:8px}
+  .mini{font-size:11px}
+  .cookie{left:12px;right:12px}
+  .sticky .wrap{padding:8px 0}
+  .timer{font-size:14px}
+}
+@media (max-width: 480px){
+  header .brand h1{font-size:16px}
+  .headline{font-size:26px}
+  .sub{font-size:14px}
+  .hero{padding:42px 0 18px}
+  .hero-img{height:180px;border-radius:12px}
+  .cta{gap:8px}
+  .cta .btn{padding:10px 14px;font-size:13px}
+  .card{border-radius:14px}
+  .img{height:150px}
+  .content{padding:12px}
+  .title{font-size:15px}
+  .desc{font-size:13px}
+  .price .new{font-size:16px}
+  .qty span{min-width:18px;text-align:center;display:inline-block}
+  .plan{padding:16px;border-radius:14px}
+  .plan .value{font-size:28px}
+  .testi .quote{padding:14px;border-radius:12px}
+  .sticky .wrap{gap:10px}
+  .sticky .btn{padding:10px 12px;font-size:13px}
+  .wa{width:50px;height:50px}
+}
+@media (max-width:360px){
+  .headline{font-size:22px}
+  .cta .btn{font-size:12px;padding:9px 12px}
+  .img{height:130px}
+  .title{font-size:14px}
+  .desc{font-size:12px}
+}
+
+</style>
 </head>
 <body>
   <header>
